--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@fancyapps/ui": "^6.0.4",
+        "flatpickr": "^4.6.13",
         "gsap": "^3.13.0",
         "jquery": "^3.7.1",
         "swiper": "^11.2.8"
